/*
 * DataOS Metrics Runtime Build Script
 * Quarkus + JDK 21 虚拟线程 + SQLite
 */

plugins {
    id 'java'
    id 'io.quarkus' version '3.27.0'  // 升级到最新稳定版
    id 'application'
    id 'org.owasp.dependencycheck' version '8.4.0' apply false
}

group = 'com.asiainfo.metrics'
version = '1.0.0'
description = 'dataos-metrics-runtime - 基于 Quarkus 3.27 + JDK 21 虚拟线程的高性能KPI查询引擎'

java {
    // 自动下载并管理JDK 21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    all {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }
}

repositories {
    maven {
        url 'https://maven.aliyun.com/repository/public/'
    }
    maven {
        allowInsecureProtocol true
        url "http://10.19.83.120/nexus/content/repositories/releases/"
    }
    maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
    mavenCentral()
}

dependencies {
    implementation platform('io.quarkus.platform:quarkus-bom:3.27.0')

    // Quarkus Core
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'

    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-micrometer'
    implementation 'io.quarkus:quarkus-logging-json'

    // Database
    implementation 'io.quarkus:quarkus-jdbc-mysql'
    implementation 'io.quarkus:quarkus-agroal'

    // SQLite JDBC Driver
    implementation 'org.xerial:sqlite-jdbc:3.45.0.0'

    // MinIO S3 Client - 升级到最新版本支持Args API
    implementation 'io.minio:minio:8.5.11'

    // Cache - 使用Redis分布式缓存
    implementation 'io.quarkus:quarkus-redis-client'

    // Metrics & Monitoring
    implementation 'io.quarkus:quarkus-micrometer'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Logging (使用Logback替代slf4j-simple)
    implementation 'ch.qos.logback:logback-classic:1.5.13'

    // Test Dependencies
    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured:5.3.2'
    testImplementation 'io.quarkus:quarkus-test-common:3.27.0'

    // Development Tools
//    developmentOnly 'io.quarkus:quarkus-devtools-common:3.27.0'
}

ext {
    set('quarkus.platform.group-id', 'io.quarkus.platform')
    set('quarkus.platform.artifact-id', 'quarkus-bom')
    set('quarkus.platform.version', '3.27.0')  // 升级到最新稳定版
    set('compiler-plugin-version', '3.27.0')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked'
}

tasks.withType(Test).configureEach {
    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
    systemProperty 'quarkus.log.level', 'INFO'
}

application {
    mainClass = 'com.asiainfo.metrics.Application'
    applicationName = 'dataos-metrics-runtime'
}

tasks.register('cleanCache', Delete) {
    delete fileTree(dir: '.', includes: ['**/.gradle/**', '**/build/**'])
    delete file('gradle.properties')
    delete file('settings.gradle')
}

